--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -610,6 +610,11 @@ Wrapper on lw6hlp_list_team_colors.
 Wrapper on lw6hlp_list_weapons.
 @end deffn
 
+@subsection c-lw6img-screenshot
+@deffn {C function exported to Guile} @code{c-lw6img-screenshot}
+Wrapper on lw6img_screenshot.
+@end deffn
+
 @subsection c-lw6ker-add-cursor
 @deffn {C function exported to Guile} @code{c-lw6ker-add-cursor}
 Wrapper on lw6ker_add_cursor.
@@ -663,6 +668,21 @@ Wrapper on lw6ker_get_cursor.
 @subsection c-lw6ker-get-moves
 @deffn {C function exported to Guile} @code{c-lw6ker-get-moves}
 Wrapper on lw6ker_get_moves.
+@end deffn
+
+@subsection c-lw6ker-get-nb-colors
+@deffn {C function exported to Guile} @code{c-lw6ker-get-nb-colors}
+Wrapper on lw6ker_game_state_get_nb_colors.
+@end deffn
+
+@subsection c-lw6ker-get-nb-cursors
+@deffn {C function exported to Guile} @code{c-lw6ker-get-nb-cursors}
+Wrapper on lw6ker_game_state_get_nb_cursors.
+@end deffn
+
+@subsection c-lw6ker-get-nb-nodes
+@deffn {C function exported to Guile} @code{c-lw6ker-get-nb-nodes}
+Wrapper on lw6ker_game_state_get_nb_nodes.
 @end deffn
 
 @subsection c-lw6ker-get-rounds
@@ -770,9 +790,29 @@ Wrapper on lw6map_exp_is_weapon_allowed.
 Wrapper on lw6map_get_look.
 @end deffn
 
+@subsection c-lw6map-get-max-nb-colors
+@deffn {C function exported to Guile} @code{c-lw6map-get-max-nb-colors}
+Wrapper on lw6map_get_max_nb_colors.
+@end deffn
+
+@subsection c-lw6map-get-max-nb-cursors
+@deffn {C function exported to Guile} @code{c-lw6map-get-max-nb-cursors}
+Wrapper on lw6map_get_max_nb_cursors.
+@end deffn
+
+@subsection c-lw6map-get-max-nb-nodes
+@deffn {C function exported to Guile} @code{c-lw6map-get-max-nb-nodes}
+Wrapper on lw6map_get_max_nb_nodes.
+@end deffn
+
 @subsection c-lw6map-get-music-dir
 @deffn {C function exported to Guile} @code{c-lw6map-get-music-dir}
 Wrapper on lw6map_get_music_dir.
+@end deffn
+
+@subsection c-lw6map-get-title
+@deffn {C function exported to Guile} @code{c-lw6map-get-title}
+Wrapper on lw6map_get_title.
 @end deffn
 
 @subsection c-lw6map-param-get
