--- a/liquidwar6/doc/map-gdoc.texi
+++ b/liquidwar6/doc/map-gdoc.texi
@@ -374,6 +374,45 @@ only the pointers and level ids.
 @strong{Return value:}  1 if they're the same, 0 if not.
 @end deftypefun
 
+@deftypefun {const char *} {lw6map_get_title} (lw6map_level_t * @var{level})
+@var{level}:  level to get informations about
+
+Gives the map name. This is just a simple utility/wrapper function
+which is meant to be exported to Guile scripts.
+
+@strong{Return value:}  static string, must not be freed, can't be NULL
+@end deftypefun
+
+@deftypefun {int} {lw6map_get_max_nb_colors} (const lw6map_level_t * @var{level})
+@var{level}:  level to get informations about
+
+Gives the max number of colors (AKA teams) that can fit
+on this map. This is just a simple utility/wrapper function
+which is meant to be exported to Guile scripts.
+
+@strong{Return value:}  number of colors, taken from rules
+@end deftypefun
+
+@deftypefun {int} {lw6map_get_max_nb_cursors} (const lw6map_level_t * @var{level})
+@var{level}:  level to get informations about
+
+Gives the max number of cursors that can fit
+on this map. This is just a simple utility/wrapper function
+which is meant to be exported to Guile scripts.
+
+@strong{Return value:}  number of cursors, taken from rules
+@end deftypefun
+
+@deftypefun {int} {lw6map_get_max_nb_nodes} (const lw6map_level_t * @var{level})
+@var{level}:  level to get informations about
+
+Gives the max number of nodes that can fit
+on this map. This is just a simple utility/wrapper function
+which is meant to be exported to Guile scripts.
+
+@strong{Return value:}  number of nodes, taken from rules
+@end deftypefun
+
 @deftypefun {int} {lw6map_local_info_set_music_dir} (lw6map_local_info_t * @var{local_info}, const char * @var{music_dir})
 @var{local_info}:  the structure to modify
 
