--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -27,10 +27,12 @@ Runs the @code{dat} module test suite.
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
 
-@deftypefun {int} {lw6dat_warehouse_init} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{local_node_id})
+@deftypefun {int} {lw6dat_warehouse_init} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{local_node_id}, int64_t @var{seq_0})
 @var{warehouse}:  object to initialize 
 
 @var{local_node_id}:  id of local node, used to handle local messages
+
+@var{seq_0}:  initial seq number
 
 
 Initializes a warehouse object. Won't free anything, will just
@@ -39,8 +41,10 @@ erase values if they're here
 @strong{Return value:}  new object, allocated dynamically
 @end deftypefun
 
-@deftypefun {lw6dat_warehouse_t *} {lw6dat_warehouse_new} (u_int64_t @var{local_node_id})
+@deftypefun {lw6dat_warehouse_t *} {lw6dat_warehouse_new} (u_int64_t @var{local_node_id}, int64_t @var{seq_0})
 @var{local_node_id}:  id of local node, used to handle local messages
+
+@var{seq_0}:  initial seq number
 
 
 Creates a new warehouse object.
@@ -98,12 +102,32 @@ Returns the latest (highest) serial number given for local node.
 @strong{Return value:}  integer, latest serial number
 @end deftypefun
 
-@deftypefun {int} {lw6dat_warehouse_register_node} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{node_id}, int @var{serial_0})
+@deftypefun {int64_t} {lw6dat_warehouse_get_local_seq_0} (lw6dat_warehouse_t * @var{warehouse})
+@var{warehouse}:  the warehouse object to query
+
+Gives the warehouse seq_0 number, any seq below does not make sense.
+
+@strong{Return value:}  long integer.
+@end deftypefun
+
+@deftypefun {void} {lw6dat_warehouse_set_local_seq_0} (lw6dat_warehouse_t * @var{warehouse}, int64_t @var{seq_0})
+@var{warehouse}:  the warehouse object to modify
+
+@var{seq_0}:  the new seq value
+
+Set the warehouse seq_0 number, any seq below does not make sense.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {int} {lw6dat_warehouse_register_node} (lw6dat_warehouse_t * @var{warehouse}, u_int64_t @var{node_id}, int @var{serial_0}, int64_t @var{seq_0})
 @var{warehouse}:  object to update
 
 @var{node_id}:  id of node to register
 
 @var{serial_0}:  serial number of first message 
+
+@var{seq_0}:  initial seq number
 
 Registers a node, in practice this is automatically done when receiving
 a data message but it might be interesting to do it elsewhere and force it.
