--- a/liquidwar6/doc/liquidwar6-gdoc.texi
+++ b/liquidwar6/doc/liquidwar6-gdoc.texi
@@ -144,6 +144,13 @@ Register the functions of the hlp module, make them callable from Guile.
 @strong{Return value:}  1 on success, 0 if failed.
 @end deftypefun
 
+@deftypefun {int} {lw6_register_funcs_img} ()
+
+Register the functions of the img module, make them callable from Guile.
+
+@strong{Return value:}  1 on success, 0 if failed.
+@end deftypefun
+
 @deftypefun {int} {lw6_register_funcs_ker} ()
 
 Register the functions of the ker module, make them callable from Guile.
