--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-18 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Partially fixed dat bug by removing irrelevant msgs from unsent lists.
+
 2012-12-16 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Modifying the script test suite and fixing p2p and dat along the way.
