Preparing exchange of peer id list within p2p messages.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-30 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Preparing exchange of peer id list within p2p messages.
+
 2012-12-22 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added lock support to p2p nodes to avoid recv callback problems.
