--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -151,8 +151,10 @@ Analyzes a BAR message.
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
 
-@deftypefun {int} {lw6msg_cmd_analyse_join} (lw6nod_info_t ** @var{info}, int64_t * @var{seq}, int * @var{serial}, const char * @var{msg})
+@deftypefun {int} {lw6msg_cmd_analyse_join} (lw6nod_info_t ** @var{info}, lw6nod_info_t * @var{local_info}, int64_t * @var{seq}, int * @var{serial}, const char * @var{msg})
 @var{info}:  will contain (remote) node info on success
+
+@var{local_info}:  local node info to be updated (peer_id list), can be NULL
 
 @var{seq}:  sequence used to initialize communication
 
