--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -351,10 +351,12 @@ do something whenever it's called and returns 1.
 @strong{Return value:}  1 if DUMP must be sent.
 @end deftypefun
 
-@deftypefun {int} {lw6p2p_node_put_local_msg} (lw6p2p_node_t * @var{node}, const char * @var{msg})
+@deftypefun {int} {lw6p2p_node_put_local_msg} (lw6p2p_node_t * @var{node}, const char * @var{msg}, int @var{reg})
 @var{node}:  node object to use
 
 @var{msg}:  message
+
+@var{reg}:  wether the message should register the author on other nodes
 
 Puts a message in the object. The message will be splitted into
 several atoms if needed, it can be arbitrary long.
