--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -955,9 +955,19 @@ Wrapper on lw6p2p_node_get_next_draft_msg.
 Wrapper on lw6p2p_node_get_next_reference_msg.
 @end deffn
 
+@subsection c-lw6p2p-node-get-seq-0
+@deffn {C function exported to Guile} @code{c-lw6p2p-node-get-seq-0}
+Wrapper on lw6p2p_node_get_seq_0.
+@end deffn
+
 @subsection c-lw6p2p-node-get-seq-max
 @deffn {C function exported to Guile} @code{c-lw6p2p-node-get-seq-max}
 Wrapper on lw6p2p_node_get_seq_max.
+@end deffn
+
+@subsection c-lw6p2p-node-get-seq-min
+@deffn {C function exported to Guile} @code{c-lw6p2p-node-get-seq-min}
+Wrapper on lw6p2p_node_get_seq_min.
 @end deffn
 
 @subsection c-lw6p2p-node-is-dump-needed
