--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-17 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed network NOP message reg/bootstrap problem.
+
 2012-01-12 : Christian Mauduit <ufoot@ufoot.org>
 
 	* New lw6p2p functions to get draft and reference seqs.
