--- a/liquidwar6/doc/p2p-gdoc.texi
+++ b/liquidwar6/doc/p2p-gdoc.texi
@@ -381,6 +381,30 @@ warehouse, not necessarly what is in the pilot / game_state.
 @strong{Return value:}  the seq.
 @end deftypefun
 
+@deftypefun {int} {lw6p2p_node_is_peer_connected} (lw6p2p_node_t * @var{node}, u_int64_t @var{peer_id})
+@var{node}:  the object to query
+
+Tests wether the node is connected to us.
+This is a different question from being registered, being connected
+means there's a tentacle connected to the peer, but it does not
+necessarly means this peer actively takes part in the game.
+
+@strong{Return value:}  1 if connected, 0 if not.
+@end deftypefun
+
+@deftypefun {int} {lw6p2p_node_is_peer_registered} (lw6p2p_node_t * @var{node}, u_int64_t @var{peer_id})
+@var{node}:  the object to query
+
+Tests wether the node is registered within the warehouse.
+This is a different question from being connected, being registered
+means we received a message (possibly from another peer) that
+means "this peer is part of the game" regardless of the fact
+it's connected or not. Returns true if test is performed with
+the local id.
+
+@strong{Return value:}  1 if registered, 0 if not.
+@end deftypefun
+
 @deftypefun {int} {lw6p2p_node_is_seed_needed} (lw6p2p_node_t * @var{node})
 @var{node}:  node to query
 
