--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -87,6 +87,26 @@ only in long multipart messages.
 @strong{Return value:}  newly allocated string.
 @end deftypefun
 
+@deftypefun {char *} {lw6msg_cmd_generate_meta} (int @var{serial}, int @var{i}, int @var{n}, int @var{reg}, int64_t @var{seq}, const char * @var{ker_msg})
+@var{serial}:  the message serial number
+
+@var{i}:  the message index in the group
+
+@var{n}:  the number of messages in the group
+
+@var{reg}:  wether to self-register peer on receiving this message
+
+@var{seq}:  the message seq (round + an offset)
+
+@var{ker_msg}:  the actual content of the message (passed to core algo)
+
+Generate a META command. Serial is an ever increasing number,
+i and n are most of the time 1 and 1, they are usefull
+only in long multipart messages.
+
+@strong{Return value:}  newly allocated string.
+@end deftypefun
+
 @deftypefun {char *} {lw6msg_cmd_generate_miss} (u_int64_t @var{id_from}, u_int64_t @var{id_to}, int @var{serial_min}, int @var{serial_max})
 @var{id_from}:  id of the node which didn't send data correctly
 
@@ -195,6 +215,26 @@ Analyzes a GOODBYE message.
 @var{msg}:  the message to analyze
 
 Analyzes a DATA message.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
+@deftypefun {int} {lw6msg_cmd_analyse_meta} (int * @var{serial}, int * @var{i}, int * @var{n}, int * @var{reg}, int64_t * @var{seq}, char ** @var{ker_msg}, const char * @var{msg})
+@var{serial}:  will contain serial number on success
+
+@var{i}:  will contain group index on success
+
+@var{n}:  will contain group size on success
+
+@var{reg}:  will contain reg on success (wether peer should be registered)
+
+@var{seq}:  will contain seq on success (round + an offset)
+
+@var{ker_msg}:  will contain actual message on success
+
+@var{msg}:  the message to analyze
+
+Analyzes a META message.
 
 @strong{Return value:}  1 on success, 0 on failure
 @end deftypefun
