--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-02-01 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Integration of libcaca branch by Epitech team.
+
 2012-01-22 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Trying (but failed) to fix 3rd peer connection problem.
