Renamed sys-color integer-related functions to explicitely state they use RGBA format

--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -1185,7 +1185,7 @@ All fields (RGBA) are converted.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {u_int32_t} {lw6sys_color_f_to_i} (const lw6sys_color_f_t * @var{color_f})
+@deftypefun {u_int32_t} {lw6sys_color_f_to_irgba} (const lw6sys_color_f_t * @var{color_f})
 @var{color_f}:  the color to convert
 
 Converts a color from floating point format to a single
@@ -1196,7 +1196,7 @@ directly by low-level libraries such as SDL.
 @strong{Return value:}  the color serialized in an integer.
 @end deftypefun
 
-@deftypefun {u_int32_t} {lw6sys_color_8_to_i} (lw6sys_color_8_t @var{color_8})
+@deftypefun {u_int32_t} {lw6sys_color_8_to_irgba} (lw6sys_color_8_t @var{color_8})
 @var{color_8}:  the color to convert
 
 Converts a color from common "0 to 255" structured format to a single
@@ -1207,7 +1207,7 @@ directly by low-level libraries such as SDL.
 @strong{Return value:}  the color serialized in an integer.
 @end deftypefun
 
-@deftypefun {void} {lw6sys_color_i_to_f} (lw6sys_color_f_t * @var{color_f}, u_int32_t @var{color_i})
+@deftypefun {void} {lw6sys_color_irgba_to_f} (lw6sys_color_f_t * @var{color_f}, u_int32_t @var{color_i})
 @var{color_f}:  the converted color (point must point to writable memory)
 
 @var{color_i}:  the color to convert
@@ -1218,7 +1218,7 @@ a floating point structure.
 @strong{Return value:}  none.
 @end deftypefun
 
-@deftypefun {lw6sys_color_8_t} {lw6sys_color_i_to_8} (u_int32_t @var{color_i})
+@deftypefun {lw6sys_color_8_t} {lw6sys_color_irgba_to_8} (u_int32_t @var{color_i})
 @var{color_i}:  the color to convert
 
 Converts a color from a serialized integer format to
